kubernetes/istio-lab/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-lab
  labels:
    istio-env: istio-control-master
    istio-injection: enabled
