kubernetes/istio-lab/destination.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: destination
  namespace: istio-lab
spec:
  type: ClusterIP
  # clusterIP: None
  selector:
    app: destination
  ports:
    - name: grpc
      protocol: TCP
      port: 9000
      targetPort: 9000
  sessionAffinity: None

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: destination
  name: destination
  namespace: istio-lab
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: destination
  strategy:
    rollingUpdate:
      maxSurge: 0%
      maxUnavailable: 100%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: destination
    spec:
      containers:
        - env:
            - name: GRPCSERVER2_ENDPOINT
              value: origin-service.istio-lab.svc.cluster.local:9000
          image: ${CONTAINER_REGISTRY}/grpcserver1:404c41a
          imagePullPolicy: Always
          name: destination
          ports:
            - containerPort: 9000
              name: grpc
              protocol: TCP
