kubernetes/istio-lab/origin-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: origin-service
  namespace: istio-lab
spec:
  type: ClusterIP
  # clusterIP: None
  selector:
    app: origin
  ports:
    - name: grpc
      protocol: TCP
      port: 9000
      targetPort: 9000
  sessionAffinity: None

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: origin
  name: origin
  namespace: istio-lab
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: origin
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: origin
    spec:
      containers:
        - image: ${CONTAINER_REGISTRY}/grpcserver2:ec5cd68
          imagePullPolicy: Always
          name: grpcserver2
          ports:
            - containerPort: 9000
              name: grpc
              protocol: TCP
