kubernetes/istio-lab/envoy_filter.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: jwt-filter
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      authority-jwt: enabled
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_OUTBOUND
        listener:
          filterChain:
            filter:
              name: "envoy.http_connection_manager"
              subFilter:
                name: "envoy.router"
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.jwt_authn
          typed_config:
            "@type": "type.googleapis.com/envoy.config.filter.http.jwt_authn.v2alpha.JwtAuthentication"
            providers:
              authority_jwks:
                issuer: "authority"
                remote_jwks:
                  http_uri:
                    uri: "http://authority.authority.svc.cluster.local:8080/jwks"
                    cluster: "outbound|8080||authority.authority.svc.cluster.local"
                    timeout: 1s
                  cache_duration: 3600s
                forward: true
                payload_in_metadata: "jwt_authority"
              authority2_jwks:
                issuer: "authority-2"
                remote_jwks:
                  http_uri:
                    uri: "http://authority-2.authority.svc.cluster.local:8080/jwks"
                    cluster: "outbound|8080||authority-2.authority.svc.cluster.local"
                    timeout: 1s
                  cache_duration: 3600s
                forward: true
                payload_in_metadata: "jwt_authority"
            rules:
              - match:
                  prefix: /
                requires:
                  requires_any:
                    requirements:
                      - provider_name: authority_jwks
                      - provider_name: authority2_jwks
                      - allow_missing_or_failed: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: lua-filter
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      authority-jwt: enabled
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_OUTBOUND
        listener:
          filterChain:
            filter:
              name: "envoy.http_connection_manager"
              subFilter:
                name: "envoy.filters.http.jwt_authn"
      patch:
        operation: INSERT_AFTER
        value:
          name: envoy.filters.http.lua
          typed_config:
            "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
            inlineCode: |
              function envoy_on_request(request)
                  local ok, message = pcall(handle_request, request)
                  if not ok then
                      request:logWarn(message)
                  end
              end

              function handle_request(request)
                  local meta = request:streamInfo():dynamicMetadata()
                  if not meta then
                      return
                  end

                  local jwt_filter_meta = meta:get("envoy.filters.http.jwt_authn")
                  if not jwt_filter_meta then
                      return
                  end

                  local claims = jwt_filter_meta["jwt_authority"]
                  if not claims then
                      return
                  end

                  local iss = claims["iss"]
                  if not iss then
                      return
                  end

                  request:headers():add("ISS", iss)
              end
