kubernetes/istio-lab/virtual_service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs
  namespace: istio-lab
spec:
  hosts:
    - origin-service.istio-lab.svc.cluster.local
  http:
    - match:
        - headers:
            destination:
              exact: "replication"
      route:
        - destination:
            host: replication-service.istio-lab.svc.cluster.local
    - route:
        - destination:
            host: origin-service.istio-lab.svc.cluster.local
